ref: Modify Code Style